[package]
name = "stm32-flash"
description = "Flash driver for the STM32 MCU family"
authors = ["Wojciech Jakóbczyk <jakobczyk.woj@gmail.com>"]
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/stm32-flash"
exclude = [".gitignore"]
keywords = ["no-std", "stm32", "flash", "embedded"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wjakobczyk/stm32-flash"
version = "0.1.0"
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4 = { version = "0.8.0", features = ["stm32f407", "rt"] }

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
